// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "backgroundColor": "rgba(0,175,255,1.00)",
        "borderBottomLeftRadius": "0.5px",
        "borderBottomRightRadius": "0.5px",
        "borderTopLeftRadius": "0.5px",
        "borderTopRightRadius": "0.5px",
        "height": "1px",
      }
    }
  />
</div>
`;

exports[`Separator matches snapshot with properties 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "borderBottomLeftRadius": "1.5px",
        "borderBottomRightRadius": "1.5px",
        "borderTopLeftRadius": "1.5px",
        "borderTopRightRadius": "1.5px",
        "height": "3px",
      }
    }
  />
</div>
`;
